# django_tutorial

./: .gitignore  READme.md  pyproject.toml
mysite/mysite/: settings.py
mysite/polls/: admin.py  models.py  tests.py  urls.py  views.py
