[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = ""
authors = ["Daria <darianow112@gmail.com>"]
readme = "README.md"
packages = [{include = "django_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
